# llm-eval-starter-skill

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/support-triage/: eval-intake.md  report.md  rubric.md
scripts/: build_release.py  validate_public_package.py
skill/: SKILL.md
skill/agents/: openai.yaml
skill/assets/templates/: checker.py  eval-intake.md  openai-evals.yaml  report-template.md  rubric.md  samples.jsonl
skill/references/: grader-selection.md  openai-evals-usage.md  sample-design.md
skill/scripts/: create_eval_scaffold.py  detect_openai_evals.py  summarize_jsonl.py
src/llm_eval_starter/: __init__.py  cli.py  detect.py  project.py  release.py  scaffold.py  summarize.py  validate.py
tests/: test_project.py
